# GenderClassifier

./: CMakeLists.txt  README.md
include/: lbp.h  operation.hpp  pipeline.hpp  window.h
src/: classifier.cpp  operation.cpp  pipeline.cpp  trainer.cpp
